console: Fix entity names overflow

--- a/pkg/webui/components/sidebar/dedicated-entity/dedicated-entity.styl
+++ b/pkg/webui/components/sidebar/dedicated-entity/dedicated-entity.styl
@@ -14,7 +14,7 @@
 
 .dedicated-entity
   text-decoration: none
-  line-height: 1.6rem
+  line-height: $lh.xs3
   color: var(--c-text-neutral-heavy)
   position: relative
   height: 2.5rem
