--- a/pkg/webui/console/containers/gateway-overview-header/gateway-overview-header.styl
+++ b/pkg/webui/console/containers/gateway-overview-header/gateway-overview-header.styl
@@ -31,6 +31,8 @@
     font-weight: $fw.bold
     font-size: $fs.l
     margin: 0
+    overflow: hidden
+    text-overflow: ellipsis
 
   .id
     color: var(--c-text-neutral-semilight)
